@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 1513 RMD160 8f7bcde5b3ef2a0bd74fa08e192a9fdb340c7a80 SHA1 e24b0c3590acde157645bd43170ee62d09204a2a SHA256 7a561070a9c2eadc08eca75de6169c184fc205d145f72a27459ff5e6481b75e2
-EBUILD midori-9999.ebuild 1569 RMD160 4ddf274bb1ec39b581e02506747a0f494bbf31c5 SHA1 9ca22fc02be1abed85f4a9a931e11a0504ead3ec SHA256 aa2c7dd2d409ea90b3f83b416b81323b3c8316ae5e0c4774fbb843d3ae2f2200
-MISC ChangeLog 891 RMD160 2e3bdc4954bcbbc365da2f93ac6ae8927d30be59 SHA1 120b932cfb797c40f5e3de1abd03261b23472c2c SHA256 f926124618b4513c28baee388b3a2c8bba5ef0cc9123a4fc90b1a5ac916e1d8f
+EBUILD midori-0.1.1.ebuild 1607 RMD160 72b8b8d80ecf18941d59fe142e425635cceca5bd SHA1 82c1af52cdf318d87e1989c693b43e597ea60a49 SHA256 ed978073f02d1c9571b9fdf1c88e7edd9b1b238786b45c0054c4eb241d1854ad
+EBUILD midori-9999.ebuild 1705 RMD160 84b9fc7e0557309e48ff4391b53b0443cdc83825 SHA1 2c5f2d19428060eee0dafc8c3fb4d434da9fcfce SHA256 1b2f78cfbf3d32fffb22de970c95e0248be876873f0962d635178e00370ed8be
+MISC ChangeLog 1029 RMD160 8f95b41e1b326241e47feb0d9206990022da605c SHA1 8829dcf713708292f8005e1cc694a1abb657f5b0 SHA256 3bcc38d7a8d4504be809171365b0db9a7c37c4dc7686598993d288a8c93f0bf6
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk71OMACgkQKhnDs22gwa9szQCbBjXwIN4wqQMHNw9dpvnFHT7b
-eAcAoIy2EChKPhYTgs0nBdio9KR+V5pU
-=DMKx
+iEYEARECAAYFAkk8TjkACgkQKhnDs22gwa8wIQCgvZ36AOCaZLB3fIicMC2tdvs6
+8P0AoI8X7bJPmd/wQn8IthUhYZwv2dQT
+=wXjW
 -----END PGP SIGNATURE-----
